--- a/namethatobject-frontend/src/App.css
+++ b/namethatobject-frontend/src/App.css
@@ -62,6 +62,7 @@
 body {
   background-color: var(--background-gray);
   color: var(--primary-text-gray);
+  font-family: 'Noto Sans', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
